# Project-2

./: frizzell_project2writeup.docx  project2_final.ml  test.ml
_opam/.opam-switch/: environment  switch-config  switch-state
_opam/.opam-switch/backup/: state-20240405134625.export
_opam/.opam-switch/config/: conf-withdkml.config  ocaml-system.config  ocaml.config
_opam/.opam-switch/install/: camlp-streams.changes  camlp-streams.install  chrome-trace.changes  chrome-trace.install  cmdliner.changes  conf-withdkml.changes  cppo.changes  cppo.install  csexp.changes  csexp.install  dkml-runtime-common-native.changes  dune-build-info.changes  dune-build-info.install  dune-configurator.changes  dune-configurator.install  dune.changes  dune.install  either.changes  either.install  mew.changes  mew.install  ocaml-config.changes  ocaml-system.changes  ocaml.changes  ordering.changes  ordering.install  result.changes  result.install  seq.changes  trie.changes  trie.install  xdg.changes  xdg.install
_opam/.opam-switch/sources/dkml-runtime-common-native.2.1.0/: .gitattributes  .gitignore  DEVELOPING.md  README.md  bump-version.cmake  dkml-runtime-common-native.opam  dkml-runtime-common.opam  dune  install.cmd  install.sh  template.dkmlroot
_opam/.opam-switch/sources/dkml-runtime-common-native.2.1.0/tests/: crossplatform-tests.sh
_opam/lib/camlp-streams/: camlp_streams.cma  camlp_streams.cmxa  camlp_streams.cmxs  camlp_streams.lib  dune-package  genlex.cmi  genlex.cmt  genlex.cmti  genlex.cmx  stream.cmi  stream.cmt  stream.cmti  stream.cmx
_opam/lib/chrome-trace/: META  chrome_trace.cma  chrome_trace.cmi  chrome_trace.cmt  chrome_trace.cmti  chrome_trace.cmx  opam  (+4 more)
(+191 files in other folders)
