opam-version: "2.0"
version: "2.1.0"
synopsis: "Common runtime code used in DKML"
description: "Common runtime code used in DKML.

The runtime code will be available in the 'lib/dkml-runtime-common' folder
of your Opam switch or findlib installation."
maintainer: ["opensource+diskuv-ocaml@support.diskuv.com"]
authors: ["Diskuv, Inc. <opensource+diskuv-ocaml@support.diskuv.com>"]
license: "Apache-2.0"
homepage: "https://github.com/diskuv/dkml-runtime-common"
bug-reports: "https://github.com/diskuv/dkml-runtime-common/issues"
dev-repo: "git+https://github.com/diskuv/dkml-runtime-common.git"
depends: [
  "dune" {>= "2.9"}
]
build: [
  ["dune" "build" "-p" name]
]
