; This is not called by dkml-runtime-common-native.opam, because
; dkml-runtime-common-native is required _before_ dune is built (the dune shim
; uses it).

; However for regular dune-based packages pulling in dependencies like
;    ["sh" "%{dkml-runtime-common:lib}%/macos/brewbundle.sh"] {os-distribution = "homebrew"}
; in your .opam file is useful.

(library
  (name dkml_runtime_common)
  (public_name dkml-runtime-common)
  (modules))

(install
 (package dkml-runtime-common)
 (section lib)
 (files
  (template.dkmlroot as template.dkmlroot)
  (macos/brewbundle.sh as macos/brewbundle.sh)
  (unix/_common_tool.sh as unix/_common_tool.sh)
  (unix/_within_dev.sh as unix/_within_dev.sh)
  (unix/crossplatform-functions.sh as unix/crossplatform-functions.sh)))
